[project]
name = "principality-next"
version = "2.2.0"
description = "Modular Discord Bot Framework"

dependencies = [
    "nextcord",
    "pyfigure",
    "python-dotenv",
    "requests",
    "typer @ git+https://github.com/Soumeh/typer"
]

[tool.setuptools]
packages = [
    'principality',
    'principality.ext',
    'cherub'
]

[project.scripts]
principality = "principality:__main__"
cherub = "cherub:__main__"