[project]
name = "principality-next"
version = "2.2.3"
description = "Modular Discord Bot Framework"

dependencies = [
    "nextcord",
    "pyfigure",
    "python-dotenv",
    "requests",
    "typer @ git+https://github.com/Soumeh/typer"
]

[tool.setuptools]
packages = [
    'principality',
    'principality.ext',
    'cherub',
    'cog'
]

[project.scripts]
principality = "principality.__main__:main"
cherub = "cherub.__main__:main"